# SalesMonitoring

./: Cargo.toml  README.md
API/: Cargo.toml
API/json_files/: database_config.json
API/src/: main.rs
API/src/api/: endpoints.rs  routes.rs
API/src/models/: request_models.rs
API/src/repository/: database_connection.rs  database_functions.rs  mod.rs
CSV_Loader/: .gitignore  csv_up.py  data_refresh_scheduler.py  req.txt
db_scripts/: average_order_value.sql  customer_lifetime_value.sql  tabels.sql  top_n_products_by_category.sql  top_n_products_by_region.sql  top_n_products_overall.sql  total_customers.sql  total_orders.sql  total_revenue.sql  total_revenue_by_category.sql  total_revenue_by_product.sql  total_revenue_by_region.sql
json_files/: database_config.json
postman_collection/: SalesMonitoring.postman_collection.json
src/: main.rs
src/api/: auth_validation.rs  endpoints.rs  extractor_functions.rs  mod.rs  routes.rs
src/encryptions/: crypto_functions.rs
src/logger/: fern_logger.rs  mod.rs
src/models/: request_models.rs
src/repository/: database_functions.rs
