[package]
name = "SalesMonitoring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4"
serde = { version = "1.0.104", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.0", features = ["json"] }
chrono = "0.4"
serde_json = "1.0"
tokio-util = { version = "0.6", features = ["full"]}
futures-util = "0.3.28"
log = "0.4"
fern = { version = "0.6.2", features = ["date-based"] }
log2 = "0.1.7"
env_logger = "0.10.0"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }